<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="#aa0000"
                android:gravity="center_horizontal"
                android:text="@string/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#0000aa"
                android:gravity="center_horizontal"
                android:text="@string/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#00aa00"
                android:gravity="center_horizontal"
                android:text="@string/green" />

</LinearLayout>